tests/baselines/reference/moduleResolution_relativeImportJsFile_noImplicitAny.errors.txt
/src/a.ts(1,20): error TS7016: Could not find a declaration file for module './b'. '/src/b.js' implicitly has an 'any' type.


==== /src/a.ts (1 errors) ====
    import * as b from "./b";
                       ~~~~~
!!! error TS7016: Could not find a declaration file for module './b'. '/src/b.js' implicitly has an 'any' type.
    
==== /src/b.js (0 errors) ====
    export const x = 0;
    